# signal-rust-setup

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: captcha.rs  cli.rs  config.rs  docker.rs  errors.rs  lib.rs  main.rs  qr.rs  system.rs  tests.rs
tests/: cli_smoke.rs
